# skin-cancer-classification

./: .gitignore  README.md  best_params.json  eda.py  extract_data.sh  features.json  misclassified_examples.json  model.py  plotting.py  processing.py  pyproject.toml  requirements.txt  robust_scaler.pkl  svc.py
utils/: consts.py  elasticnet.py  hog.py  lbp.py  processing.py  xgb.py
